<resources>
    <string name="app_name">东城1号</string>
    <string name="led1">Led1</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="led2">Led2</string>
    <string name="led3">Led3</string>
    <string name="led5">Led5</string>
    <string name="in3">In3</string>
    <string name="in4">In4</string>
    <string name="led6">Led6</string>
    <string name="in2">In2</string>
    <string name="led4">Led4</string>
    <string name="led7">Led7</string>
    <string name="led8">Led8</string>
    <string name="in1">In1</string>
</resources>
