<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <com.qmuiteam.qmui.widget.QMUITopBar
            android:id="@+id/topBarCon"
            android:layout_width="match_parent"
            app:qmui_topbar_bg_color="@color/colorAccent"
            android:layout_height="?attr/qmui_topbar_height"
            app:qmui_topbar_need_separator="true">
        </com.qmuiteam.qmui.widget.QMUITopBar>

    <Switch
        android:id="@+id/Led1"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/led1"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintEnd_toEndOf="@+id/Led4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/Led2"
        android:layout_width="90dp"
        android:layout_height="23dp"

        android:layout_marginStart="95dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/led2"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/Led3"
        android:layout_width="90dp"
        android:layout_height="24dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/led3"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/Led4"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginStart="285dp"
        android:layout_marginTop="64dp"
        android:text="@string/led4"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/Led5"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="8dp"
        android:text="@string/led5"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/Led6"
        android:layout_width="90dp"
        android:layout_height="27dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="8dp"
        android:text="@string/led6"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/Led7"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="8dp"
        android:text="@string/led7"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/Led8"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginStart="285dp"
        android:layout_marginTop="116dp"
        android:text="@string/led8"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Wd1"
        android:layout_width="277dp"
        android:layout_height="23dp"
        android:layout_marginTop="148dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Wd2"
        android:layout_width="277dp"
        android:layout_height="24dp"
        android:layout_marginTop="184dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/In1"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="8dp"
        android:clickable="false"
        android:text="@string/in1"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/In2"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="8dp"
        android:text="@string/in2"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="@+id/In4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/In3"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="8dp"
        android:text="@string/in3"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="@+id/In4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/In4"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="228dp"
        android:text="@string/in4"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>